--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proyectoweb",
+  "name": "proyectofinaltw",
   "version": "1.0.0",
-  "description": "Proyecto Final Tecnologias para la web",
+  "description": "Es el proyecto final para la materia de Tec. para la Web",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,21 +9,13 @@
     "build": "webpack --mode production"
   },
   "keywords": [
-    "React",
-    "js",
-    "servlet"
+    "react",
+    "javascript",
+    "html",
+    "servlets"
   ],
-  "author": "Christian Vega <christian990116@gmail.com>",
+  "author": "Christian Vega",
   "license": "MIT",
-  "devDependencies": {
-    "css-loader": "^6.5.1",
-    "mini-css-extract-plugin": "^2.4.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "sass": "^1.44.0",
-    "sass-loader": "^12.3.0",
-    "style-loader": "^3.3.1"
-  },
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.4",
@@ -31,8 +23,18 @@
     "babel-loader": "^8.2.3",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.5.1",
+    "mini-css-extract-plugin": "^2.4.5",
+    "sass": "^1.44.0",
+    "sass-loader": "^12.3.0",
+    "style-loader": "^3.3.1"
   }
 }
